--- a/package.json
+++ b/package.json
@@ -26,15 +26,22 @@
         "@fullcalendar/daygrid": "^6.0.3",
         "@fullcalendar/interaction": "^6.0.3",
         "@fullcalendar/timegrid": "^6.0.3",
+        "@nomicfoundation/hardhat-ethers": "^3.0.5",
         "chart.js": "^3.3.2",
+        "ethers": "^5.7.2",
+        "hardhat": "^2.22.2",
         "primeflex": "^3.3.1",
         "primeicons": "6.0.1",
         "primeng": "17.2.0",
+        "prismjs": "^1.29.0",
         "quill": "^1.3.7",
         "rxjs": "~7.8.1",
         "tslib": "^2.5.0",
-        "zone.js": "~0.14.0",
-        "prismjs": "^1.29.0"
+        "typechain": "^8.3.2",
+        "web3": "^4.6.0",
+        "web3-core": "^4.3.2",
+        "web3-eth-contract": "^4.2.0",
+        "zone.js": "~0.14.0"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "^17.0.5",
