--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,7 +3,10 @@
     "extends": "./tsconfig.json",
     "compilerOptions": {
         "outDir": "./out-tsc/app",
-        "types": []
+        "types": [],
+        "allowSyntheticDefaultImports": true,
+        "resolveJsonModule": true,
+        "esModuleInterop": true,
     },
     "files": [
         "src/main.ts"
