--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
       "noImplicitReturns": true,
       "noFallthroughCasesInSwitch": true,
       "sourceMap": true,
+      "allowSyntheticDefaultImports": true,
       "declaration": false,
       "downlevelIteration": true,
       "experimentalDecorators": true,
@@ -18,6 +19,8 @@
       "importHelpers": true,
       "target": "ES2022",
       "module": "ES2022",
+      "resolveJsonModule": true,
+      "esModuleInterop": true,
       "useDefineForClassFields": false,
       "lib": [
         "ES2022",
